terraform-k8s-codecov/traefik-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: phil-ccmigrate-terraform.ngrok.io
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 5000
      - path: /archive
        backend:
          serviceName: minio
          servicePort: 9000
      - path: /minio
        backend:
          serviceName: minio
          servicePort: 9000
